# kitbash_xp

./: .gitignore  CMakeLists.txt  README.md  build.bat  package.bat
kitbash_cli/: README.md
kitbash_sdk/: CMakeLists.txt  README.md
misc/: KITBASH_C++_PLAN.md  OBJ8_Specs.txt
src/: CMakeLists.txt  build.bat  kitbash.cpp  kitbash.h  main.cpp
